--- a/02.18_인공지능.md
+++ b/02.18_인공지능.md
@@ -1,6 +1,6 @@
-02/18(화)
 
-# 인공지능 6시간 강의
+# 02/18 인공지능
+
 ## 파이토치: 직관적으로 설계된 딥러닝 라이브러리
 ## 데이터 전처리: 모델의 예측력을 높이기 위해
 ## 데이터 증강: 학습 데이터의 양과 다양성을 늘리기 위해 
